# template-python-package

./: Makefile  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yaml
